force-app/main/default/objects/Fee_Waiver__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>Country__r.ISO_Alpha_2__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Fee Waivers</relationshipLabel>
        <relationshipName>Fee_Waivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redeemed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeemed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Fee Waiver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FW-{0000000}</displayFormat>
        <label>Fee Waiver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Waivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>